--- a/drinks/templates/drinks/base.html
+++ b/drinks/templates/drinks/base.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="#">Create</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Restock</a>
+                    <a class="nav-link" href="/restock">Restock</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Settings</a>
