Find available ingredients and send post request to start pour

--- a/drinks/templates/drinks/show.html
+++ b/drinks/templates/drinks/show.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/drinks.css' %}"/>
-
+<script src="{% static 'js/show_drink.js' %}"></script>
 
 <div class="container" style="margin-left: 0px; margin-right: 0px; max-width: unset">
     <div class="row">
@@ -33,12 +33,25 @@
     </div>
     <div class="row">
         <div class="col-8 offset-2 py-3 ">
-            <button type="button" class="btn btn-primary btn-lg btn-block">Start Pour</button>
+            <button id="pour_button" type="button" class="btn btn-primary btn-lg btn-block">Start Pour</button>
         </div>
     </div>
 </div>
 <script>
-    var ing = {{drink.ingredients | safe}}
+    var ingredients = {{drink.ingredients | safe}};
+    var available = {{available | safe}};
+
+    var options = {};
+
+    available.forEach( (ingredient, index) => {
+        console.log(ingredient.fields.type);
+        if(options[ingredient.fields.type]){
+            console.log("Got a duplicate type here! Giving the user the option to select on pour");
+            options[ingredient.fields.type].push(ingredient.fields.name);
+        } else {
+            options[ingredient.fields.type] = [ingredient.fields.name];
+        }
+    });
 
 </script>
 {% endblock %}
