Updated Create Drink Form, moved urls

--- a/drinks/templates/drinks/base.html
+++ b/drinks/templates/drinks/base.html
@@ -19,7 +19,7 @@
         </button>
         <a class="navbar-brand" href="/">Bartender</a>
         <div>
-            <a href="/create" class="btn btn-dark px-2">
+            <a href="/drinks/new" class="btn btn-dark px-2">
 		    <div class="fa fas fa-icon fa-plus-circle"></div>
             </a>
             <div class="btn btn-dark px-2" id="search">
